stylesheets/screen.css
/* Generated by Font Squirrel (http://www.fontsquirrel.com) on February 9, 2012 */


@font-face {
  font-family: 'Open Sans';
  src: url('../fonts/opensans-regular-webfont.eot');
  src: url('../fonts/opensans-regular-webfont.eot?#iefix') format('embedded-opentype'),
       url('../fonts/opensans-regular-webfont.woff') format('woff'),
       url('../fonts/opensans-regular-webfont.ttf') format('truetype'),
       url('../fonts/opensans-regular-webfont.svg#OpenSansRegular') format('svg');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'Open Sans';
  src: url('../fonts/opensans-italic-webfont.eot');
  src: url('../fonts/opensans-italic-webfont.eot?#iefix') format('embedded-opentype'),
       url('../fonts/opensans-italic-webfont.woff') format('woff'),
       url('../fonts/opensans-italic-webfont.ttf') format('truetype'),
       url('../fonts/opensans-italic-webfont.svg#OpenSansItalic') format('svg');
  font-weight: normal;
  font-style: italic;
}

@font-face {
  font-family: 'Open Sans';
  src: url('../fonts/opensans-bold-webfont.eot');
  src: url('../fonts/opensans-bold-webfont.eot?#iefix') format('embedded-opentype'),
       url('../fonts/opensans-bold-webfont.woff') format('woff'),
       url('../fonts/opensans-bold-webfont.ttf') format('truetype'),
       url('../fonts/opensans-bold-webfont.svg#OpenSansBold') format('svg');
  font-weight: bold;
  font-style: normal;
}

@font-face {
  font-family: 'Open Sans';
  src: url('../fonts/opensans-bolditalic-webfont.eot');
  src: url('../fonts/opensans-bolditalic-webfont.eot?#iefix') format('embedded-opentype'),
       url('../fonts/opensans-bolditalic-webfont.woff') format('woff'),
       url('../fonts/opensans-bolditalic-webfont.ttf') format('truetype'),
       url('../fonts/opensans-bolditalic-webfont.svg#OpenSansBoldItalic') format('svg');
  font-weight: bold;
  font-style: italic;
}

@font-face {
  font-family: 'Open Sans';
  src: url('../fonts/opensans-extrabold-webfont.eot');
  src: url('../fonts/opensans-extrabold-webfont.eot?#iefix') format('embedded-opentype'),
       url('../fonts/opensans-extrabold-webfont.woff') format('woff'),
       url('../fonts/opensans-extrabold-webfont.ttf') format('truetype'),
       url('../fonts/opensans-extrabold-webfont.svg#OpenSansExtrabold') format('svg');
  font-weight: 800;
  font-style: normal;
}

/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block;
}
body {
  line-height: 1;
}
ol, ul {
  list-style: none;
}
blockquote, q {
  quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

header, footer, section {
  display: block;
  position: relative;
}

/* STYLES */

div.shell {
  display: block;
  width: 670px;
  margin: 0 auto;
}

a#forkme_banner {
  position: absolute;
  top: 0;
  left: 0;
  width: 138px;
  height: 138px;
  display: block;
  background: transparent url(../images/fork-sprite.png) 0 0 no-repeat;
  text-indent: -9000px;
  z-index: 3;
}

a#forkme_banner:hover {
  background-position: 0 -138px;
}

/* edit header */

header {
  position: absolute;
  z-index: 2;
  margin: 0 auto;
  width: 700px;
  left: 50%;
  margin-left: -350px;
  margin-top: -20px;
}

header span.ribbon-inner {
  position: relative;
  display: block;
  background-color: #cd596b;
  border: 4px solid #7c334f;
  padding: 2px;
  z-index: 1;
}

header span.left-tail, header span.right-tail {
  position: relative;
  display: block;
  width: 56px;
  height: 105px;
  background: transparent url(../images/ribbon-tail-sprite.png) 0 0 no-repeat;
  position: absolute;
  bottom: -37px;
  z-index: 0;
}

header span.left-tail {
  background-position: 0 0;
  left: -31px;
}

header span.right-tail {
  background-position: -56px 0;
  right: -31px;
}

header h1 {
  background-color: #7c334f;
  font-size: 2.5em;
  font-weight: 800;
  font-style: normal;
  text-transform: uppercase;
  color: #f5ebe1;
  /* color: #ece4d8; */
  text-align: center;
  line-height:1;
  padding: 5px 20px 5px;
}

header h2 {
  background-color: #7c334f;
  /*font: bold .85em/2.0 Georgia, Times, “Times New Roman”, serif;*/
  font-family: 'Roboto', serif;
  color: #f4ffb2;
  padding-bottom: 4px;
  margin-top: -3px;
  text-align: center;
}

section#downloads,
div#no-downloads {
  position: relative;
  display: block;
  height: 157px; /* down from 197 */
  width: 550px;
  padding-bottom: 150px;
  margin: -80px auto -150px;
  z-index: 1;
  /* background: transparent url(../images/bg-ramp.jpg) center 171px no-repeat; */
}

div#no-downloads span.inner {
  display: block;
  position: relative;
  height: 197px;
  width: 550px;
  background: transparent url(../images/download-sprite.png) 0 0 no-repeat;
}

section#downloads a {
  display: block;
  position: relative;
  height: 67px;
  width: 275px;
  padding-top: 130px;
  background: transparent url(../images/download-sprite.png) 0 0 no-repeat;
  text-align: center;
  line-height: 1;
  color: #fff;
  font-family: 'Open Sans', Myriad, Calibri, sans-serif;
  font-weight: 800;
  font-size: 1.3em;
}

section#downloads a:hover {
  text-decoration: none;
}
/* ... */

